separated todos and categories

--- a/client/views/category.html
+++ b/client/views/category.html
@@ -1,22 +1,24 @@
-<h1>Category list</h1>
-<hr>
-<form name="categoryForm" novalidate ng-submit="addCategory()">
-  <div class="form-group"
-       ng-class="{'has-error': categoryForm.content.$invalid
+<div class="col-sm-2" ng-controller="CategoryController">
+  <form name="categoryForm" novalidate ng-submit="addCategory()">
+    <div class="form-group"
+         ng-class="{'has-error': categoryForm.content.$invalid
         && categoryForm.content.$dirty}">
-    <input type="text" class="form-control focus" name="content"
-           placeholder="Content" autocomplete="off" required
-           ng-model="newCategory.content">
-    <span class="has-error control-label" ng-show="
+      <input type="text" class="form-control focus" name="name"
+             placeholder="Category" autocomplete="off" required
+             ng-model="newCategory.name">
+      <span class="has-error control-label" ng-show="
         categoryForm.content.$invalid && categoryForm.content.$dirty">
       Content is required.
     </span>
+    </div>
+    <button class="btn btn-default" ng-disabled="categoryForm.$invalid">Add</button>
+  </form>
+  <hr>
+  <div class="list-inline">
+  <span class="list-inline-item">
+  <span  ng-repeat="category in categories">{{category.name}}&nbsp;
+    <i class="glyphicon glyphicon-remove"
+       ng-click="removeCategory(category)"></i></span>
+    </span>
   </div>
-  <button class="btn btn-default" ng-disabled="categoryForm.$invalid">Add</button>
-</form>
-<hr>
-<div class="list-group">
-  <a class="list-group-item" ng-repeat="category in categories">{{category.content}}&nbsp;
-    <i class="glyphicon glyphicon-remove pull-right"
-       ng-click="removeCategory(category)"></i></a>
 </div>
