--- a/client/views/category.html
+++ b/client/views/category.html
@@ -1,24 +1,47 @@
-<div class="col-sm-2" ng-controller="CategoryController">
-  <form name="categoryForm" novalidate ng-submit="addCategory()">
-    <div class="form-group"
-         ng-class="{'has-error': categoryForm.content.$invalid
-        && categoryForm.content.$dirty}">
-      <input type="text" class="form-control focus" name="name"
-             placeholder="Category" autocomplete="off" required
-             ng-model="newCategory.name">
-      <span class="has-error control-label" ng-show="
-        categoryForm.content.$invalid && categoryForm.content.$dirty">
-      Content is required.
-    </span>
-    </div>
-    <button class="btn btn-default" ng-disabled="categoryForm.$invalid">Add</button>
-  </form>
-  <hr>
-  <div class="list-inline">
-  <span class="list-inline-item">
-  <span  ng-repeat="category in categories">{{category.name}}&nbsp;
-    <i class="glyphicon glyphicon-remove"
-       ng-click="removeCategory(category)"></i></span>
-    </span>
+<div class="row">
+  <div class="col-sm-10">
+    <h1>Category list</h1>
   </div>
+  <hr>
+</div>
+<div>
+  <div class="col-sm-6">
+    <table id="categoryTable" class="table table-striped table-bordered">
+      <tr>
+        <th>Category</th>
+        <th></th>
+      </tr>
+      <tr ng-repeat="item in categories" ng-hide="item.id == editedCategory.id">
+        <td>{{item.name}}</td>
+        <td>
+          <button ng-click="startEdit(item)" class="btn btn-xs btn-primary">
+            Edit
+          </button>
+          <button ng-click="removeCategory(item)" class="btn btn-xs btn-primary">
+            Delete
+          </button>
+        </td>
+      </tr>
+      <tr ng-class="{danger: editedCategory}">
+        <td><input ng-model="editedCategory.name" required/></td>
+        <td>
+          <button ng-hide="editedCategory.id"
+                  ng-click="addCategory()"
+                  class="btn btn-xs btn-primary">
+            Create
+          </button>
+          <button ng-show="editedCategory.id"
+                  ng-click="updateCategory(editedCategory)"
+                  class="btn btn-xs btn-primary">
+            Save
+          </button>
+          <button ng-show="editedCategory"
+                  ng-click="cancelEdit()" class="btn btn-xs btn-primary">
+            Cancel
+          </button>
+        </td>
+      </tr>
+    </table>
+  </div>
+
 </div>
