--- a/client/views/todo.html
+++ b/client/views/todo.html
@@ -1,41 +1,15 @@
-<div class="row">
-  <div class="col-sm-10">
-<h1>Todo list</h1>
-  </div>
-<hr>
-
-<div class="row">
-  <div class="col-sm-4">
-  <form name="todoForm" class="form-inline" novalidate ng-submit="addTodo()">
-      <div
-           ng-class="{'has-error': todoForm.content.$invalid
-            && todoForm.content.$dirty}">
-        <div>
-          <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0 focus" name="content"
-               placeholder="Content" autocomplete="off" required
-               ng-model="newTodo.content">
-          <select class="form-control mb-2 mr-sm-2 mb-sm-0 focus" name="category" required
-               ng-model="category" ng-options="category.name for category in categories"/>
-        </div>
-        <span class="has-error control-label" ng-show="
-            todoForm.content.$invalid && todoForm.content.$dirty">
-          Content is required.
-        </span>
-      </div>
-      <button class="btn btn-default" ng-disabled="todoForm.$invalid">Add</button>
-    </form>
+<div>
+  <div class="row">
+    <div class="col-sm-10">
+      <h1>Todo list</h1>
+    </div>
     <hr>
-    <div class="list-group">
-      <a class="list-group-item" ng-repeat="todo in todos">Content:&nbsp;{{todo.content}}&nbsp;<span class="pull-right">Category:&nbsp;{{todo.category.name}}&nbsp;
-        <i class="glyphicon glyphicon-remove pull-right"
-           ng-click="removeTodo(todo)"></i></span></a>
-    </div>
-    </div>
-
     <div class="col-sm-6">
       <table id="todoTable" class="table table-striped table-bordered">
         <tr>
-          <th>Content</th><th>Category</th><th></th>
+          <th>Content</th>
+          <th>Category</th>
+          <th></th>
         </tr>
         <tr ng-repeat="item in todos" ng-hide="item.id == editedTodo.id">
           <td>{{item.content}}</td>
@@ -50,8 +24,10 @@
           </td>
         </tr>
         <tr ng-class="{danger: editedTodo}">
-          <td><input ng-model="editedTodo.content" required /></td>
-          <td><select ng-model="category" ng-options="category as category.name for category in categories track by category.id" required/></td>
+          <td><input ng-model="editedTodo.content" required/></td>
+          <td><select ng-model="category"
+                      ng-options="category as category.name for category in categories track by category.id" required/>
+          </td>
           <td>
             <button ng-hide="editedTodo.id"
                     ng-click="createTodo(editedTodo)"
@@ -73,5 +49,5 @@
     </div>
 
 
+  </div>
 </div>
-
