--- a/client/views/category.html
+++ b/client/views/category.html
@@ -1,4 +1,4 @@
-<div>
+<form name="categoryForm" novalidate>
   <div class="row">
     <div class="col-sm-10">
       <h1>Category list</h1>
@@ -22,15 +22,25 @@
           </td>
         </tr>
         <tr ng-class="{danger: editedCategory}">
-          <td><input ng-model="editedCategory.name" required/></td>
+          <td><input ng-model="editedCategory.name" name="name" required ng-change="inputChanged()" ng-model-options="{debounce: 1000}"/>
+            <span ng-messages="categoryForm.name.$error" ng-if="categoryForm.name.$dirty">
+              <span ng-message="required">
+                Please supply a name
+              </span>
+              <span ng-message="duplicate">
+                This category is already in use
+              </span>
+            </span></td>
           <td>
             <button ng-hide="editedCategory.id"
                     ng-click="addCategory()"
+                    ng-disabled="categoryForm.$invalid"
                     class="btn btn-xs btn-primary">
               Create
             </button>
             <button ng-show="editedCategory.id"
                     ng-click="updateCategory(editedCategory)"
+                    ng-disabled="categoryForm.$invalid && categoryForm.$dirty"
                     class="btn btn-xs btn-primary">
               Save
             </button>
@@ -43,4 +53,9 @@
       </table>
     </div>
   </div>
-</div>
+</form>
+<div>Touched: {{categoryForm.name.$touched}}</div>
+<div>Dirty: {{categoryForm.name.$dirty}}</div>
+<div>Error: {{categoryForm.name.$error}}</div>
+<div>Form Invalid: {{categoryForm.$invalid}}</div>
+<div>Form dirty: {{categoryForm.$dirty}}</div>
