--- a/client/views/todo.html
+++ b/client/views/todo.html
@@ -1,4 +1,4 @@
-<form novalidate>
+<form novalidate name="todoForm">
   <div class="row">
     <div class="col-sm-10">
       <h1>Todo list</h1>
@@ -31,6 +31,7 @@
           <td>
             <button ng-hide="editedTodo.id"
                     ng-click="createTodo(editedTodo)"
+                    ng-disabled="todoForm.$invalid"
                     class="btn btn-xs btn-primary">
               Create
             </button>
