--- a/client/views/category.html
+++ b/client/views/category.html
@@ -1,15 +1,18 @@
 <form name="categoryForm" novalidate>
   <div class="row">
-    <div class="col-sm-10">
+    <div class="col-sm-12">
       <h1>Category list</h1>
     </div>
     <hr>
-    <div class="col-sm-6">
+    <div class="col-sm-12">
       <table id="categoryTable" class="table table-striped table-bordered">
+        <thead>
         <tr>
-          <th>Category</th>
-          <th></th>
+          <th class="col-sm-10">Category</th>
+          <th class="col-sm-2">Actions</th>
         </tr>
+        </thead>
+        <tbody>
         <tr ng-repeat="item in categories" ng-hide="item.id == editedCategory.id">
           <td class="name">{{item.name}}</td>
           <td>
@@ -50,6 +53,7 @@
             </button>
           </td>
         </tr>
+        </tbody>
       </table>
     </div>
   </div>
