--- a/client/views/todo.html
+++ b/client/views/todo.html
@@ -1,16 +1,19 @@
 <form novalidate name="todoForm">
   <div class="row">
-    <div class="col-sm-10">
+    <div class="col-sm-12">
       <h1>Todo list</h1>
     </div>
     <hr>
-    <div class="col-sm-6">
+    <div class="col-sm-12">
       <table id="todoTable" class="table table-striped table-bordered">
+        <thead>
         <tr>
-          <th>Content</th>
-          <th>Category</th>
-          <th></th>
+          <th class="col-sm-6">Content</th>
+          <th class="col-sm-4">Category</th>
+          <th class="col-sm-2">Actions</th>
         </tr>
+        </thead>
+        <tbody>
         <tr ng-repeat="item in todos" ng-hide="item.id == editedTodo.id">
           <td>{{item.content}}</td>
           <td>{{item.category.name}}</td>
@@ -46,6 +49,7 @@
             </button>
           </td>
         </tr>
+        </tbody>
       </table>
     </div>
 
