--- a/client/views/login.html
+++ b/client/views/login.html
@@ -19,7 +19,7 @@
 
       <div class="actions">
         <label></label>
-        <button>Login</button>
+        <button class="login-button">Login</button>
       </div>
     </fieldset>
   </form>
