--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,17 +1,17 @@
 <section>
   <form name="form" ng-submit="login()">
     <fieldset>
-      <legend>Login form</legend>
+      <legend>Please login</legend>
 
       <div class="form-group">
-        <label>Email</label>
+        <label class="col-form-label">Email</label>
         <input type="text" ng-model="user.email">
         <p class="hint" ng-show="form.email.$error.required && submitted">Email is
           required</p>
       </div>
 
       <div class="form-group">
-        <label>Password</label>
+        <label class="col-form-label">Password</label>
         <input type="password" ng-model="user.password">
         <p class="hint" ng-show="form.password.$error.required && submitted">
           Password is required</p>
