--- a/client/views/category.html
+++ b/client/views/category.html
@@ -1,7 +1,7 @@
 <form name="categoryForm" novalidate>
   <div class="row">
     <div class="col-sm-12">
-      <h1>Category list</h1>
+      <h1>All Category list</h1>
     </div>
     <hr>
     <div class="col-sm-12">
@@ -52,6 +52,24 @@
               Cancel
             </button>
           </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-sm-12">
+      <h1>Unused Category list</h1>
+    </div>
+    <hr>
+    <div class="col-sm-12">
+      <table id="categoryTable" class="table table-striped table-bordered">
+        <thead>
+        <tr>
+          <th class="col-sm-10">Category</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="item in categories" ng-hide="item.todos.length > 0">
+          <td class="name">{{item.name}}</td>
         </tr>
         </tbody>
       </table>
