--- a/client/views/forbidden.html
+++ b/client/views/forbidden.html
@@ -1,6 +1,8 @@
 <section>
+  <div class="col-sm-6 col-sm-offset-3">
   <h1>Not logged in</h1>
   <p>Please <a ui-sref="login" ui-sref-active="active">log in</a> to perform
     this action, or <a ui-sref="register" ui-sref-active="active"> register</a> if you're a new user.</p>
+  </div>
 </section>
 
