--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,29 +1,52 @@
 <section>
-  <form name="form" ng-submit="login()">
-    <fieldset>
-      <legend>Please login</legend>
+  <!--<form name="form" ng-submit="login()">-->
+    <!--<fieldset>-->
+      <!--<legend>Please login</legend>-->
 
-      <div class="form-group">
-        <label class="col-form-label">Email</label>
-        <input type="text" ng-model="user.email">
-        <p class="hint" ng-show="form.email.$error.required && submitted">Email is
-          required</p>
-      </div>
+      <!--<div class="form-group">-->
+        <!--<label class="col-form-label">Email</label>-->
+        <!--<input type="text" ng-model="user.email">-->
+        <!--<p class="hint" ng-show="form.email.$error.required && submitted">Email is-->
+          <!--required</p>-->
+      <!--</div>-->
 
-      <div class="form-group">
-        <label class="col-form-label">Password</label>
-        <input type="password" ng-model="user.password">
-        <p class="hint" ng-show="form.password.$error.required && submitted">
-          Password is required</p>
-      </div>
+      <!--<div class="form-group">-->
+        <!--<label class="col-form-label">Password</label>-->
+        <!--<input type="password" ng-model="user.password">-->
+        <!--<p class="hint" ng-show="form.password.$error.required && submitted">-->
+          <!--Password is required</p>-->
+      <!--</div>-->
 
-      <div class="actions form-group">
-        <label></label>
-        <button class="login-button">Login</button>
+      <!--<div class="actions form-group">-->
+        <!--<label></label>-->
+        <!--<button class="login-button">Login</button>-->
+      <!--</div>-->
+      <!--<div ng-show="message != ''">-->
+        <!--<span class="error-msg">{{message}}</span>-->
+      <!--</div>-->
+    <!--</fieldset>-->
+  <!--</form>-->
+  <div class="col-md-6 col-md-offset-3">
+    <h2>Login</h2>
+    <form name="form" ng-submit="login()" role="form">
+      <div class="form-group" ng-class="{ 'has-error': form.email.$dirty && form.email.$error.required }">
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email" class="form-control" ng-model="user.email" required />
+        <span ng-show="form.email.$dirty && form.email.$error.required" class="help-block">Email is required</span>
       </div>
+      <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && form.password.$error.required }">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" class="form-control" ng-model="user.password" required />
+        <span ng-show="form.password.$dirty && form.password.$error.required" class="help-block">Password is required</span>
+      </div>
+      <div class="form-actions">
+        <button type="submit" ng-disabled="form.$invalid" class="login-button btn btn-primary">Login</button>
+        <a ui-sref="register" class="btn btn-link">Register</a>
+      </div>
+      <div><span>&nbsp</span></div>
       <div ng-show="message != ''">
         <span class="error-msg">{{message}}</span>
       </div>
-    </fieldset>
-  </form>
+    </form>
+  </div>
 </section>
