changed the tailwind html

--- a/client/css/tailwind.css
+++ b/client/css/tailwind.css
@@ -585,6 +585,22 @@ a {
   color: #4dc0b5;
 }
 
+.top-nav-item {
+  color: #606f7b;
+  font-size: .875rem;
+  margin-right: 1rem;
+  font-weight: 600;
+  padding-bottom: 1rem;
+  border-bottom-width: 2px;
+  border-style: solid;
+  border-color: transparent;
+}
+
+.top-nav-item:hover {
+  color: #4dc0b5;
+  border-color: #4dc0b5;
+}
+
 .container {
   width: 100%;
 }
