--- a/client/css/tailwind-styles.css
+++ b/client/css/tailwind-styles.css
@@ -5,4 +5,11 @@ a {
   @apply text-teal;
 }
 
+.top-nav-item {
+  @apply .text-grey-darker .text-sm .mr-4 .font-semibold .pb-4 .border-b-2 .border-solid .border-transparent;
+}
+
+.top-nav-item:hover {
+  @apply .text-teal .border-teal;
+}
 @tailwind utilities;
