more tailwind support

--- a/client/css/tailwind-styles.css
+++ b/client/css/tailwind-styles.css
@@ -6,10 +6,14 @@ a {
 }
 
 .top-nav-item {
-  @apply .text-grey-darker .text-sm .mr-4 .font-semibold .pb-4 .border-b-2 .border-solid .border-transparent;
+  @apply .text-grey-darker .text-sm .mr-4 .font-semibold .pb-6 .border-b-2 .border-solid .border-transparent;
 }
 
 .top-nav-item:hover {
   @apply .text-teal .border-teal;
+}
+
+.hero {
+  background: url('/img/tailwind.jpg');
 }
 @tailwind utilities;
