--- a/client/css/tailwind.css
+++ b/client/css/tailwind.css
@@ -532,12 +532,42 @@ ul {
  * Tailwind custom reset styles
  */
 
+/**
+ * Allow adding a border to an element by just adding a border-width.
+ *
+ * By default, the way the browser specifies that an element should have no
+ * border is by setting it's border-style to `none` in the user-agent
+ * stylesheet.
+ *
+ * In order to easily add borders to elements by just setting the `border-width`
+ * property, we change the default border-style for all elements to `solid`, and
+ * use border-width to hide them instead. This way our `border` utilities only
+ * need to set the `border-width` property instead of the entire `border`
+ * shorthand, making our border utilities much more straightforward to compose.
+ *
+ * https://github.com/tailwindcss/tailwindcss/pull/116
+ */
+
 *,
 *::before,
 *::after {
   border-width: 0;
   border-style: solid;
   border-color: #dae1e7;
+}
+
+/**
+ * Undo the `border-style: none` reset that Normalize applies to images so that
+ * our `border-{width}` utilities have the expected effect.
+ *
+ * The Normalize reset is unnecessary for us since we default the border-width
+ * to 0 on all elements.
+ *
+ * https://github.com/tailwindcss/tailwindcss/issues/362
+ */
+
+img {
+  border-style: solid;
 }
 
 /**
@@ -590,7 +620,7 @@ a {
   font-size: .875rem;
   margin-right: 1rem;
   font-weight: 600;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
   border-bottom-width: 2px;
   border-style: solid;
   border-color: transparent;
@@ -2542,10 +2572,6 @@ a {
 
 .h-64 {
   height: 16rem;
-}
-
-.h-112 {
-  height: 28rem;
 }
 
 .h-auto {
@@ -6426,10 +6452,6 @@ a {
     height: 16rem;
   }
 
-  .sm\:h-112 {
-    height: 28rem;
-  }
-
   .sm\:h-auto {
     height: auto;
   }
@@ -10299,10 +10321,6 @@ a {
 
   .md\:h-64 {
     height: 16rem;
-  }
-
-  .md\:h-112 {
-    height: 28rem;
   }
 
   .md\:h-auto {
@@ -14176,10 +14194,6 @@ a {
     height: 16rem;
   }
 
-  .lg\:h-112 {
-    height: 28rem;
-  }
-
   .lg\:h-auto {
     height: auto;
   }
@@ -18049,10 +18063,6 @@ a {
 
   .xl\:h-64 {
     height: 16rem;
-  }
-
-  .xl\:h-112 {
-    height: 28rem;
   }
 
   .xl\:h-auto {
