--- a/client/css/tailwind-styles.css
+++ b/client/css/tailwind-styles.css
@@ -5,11 +5,16 @@ a {
   @apply text-teal;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 .top-nav-item {
   @apply .text-grey-darker .text-sm .mr-4 .font-semibold .pb-4 .border-b-2 .border-solid .border-transparent;
 }
 
 .top-nav-item:hover {
+  text-decoration: none;
   @apply .text-teal .border-teal;
 }
 
