Changed to use materialized

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -53,3 +53,8 @@ label.col-form-label {
   overflow: auto;
   background-color: rgba(0,0,0,0.5);
 }
+
+.container .row {
+  margin-left: 0;
+  margin-right: 0;
+}
