--- a/client/views/todo.html
+++ b/client/views/todo.html
@@ -1,16 +1,16 @@
 <form novalidate name="todoForm">
   <div class="row">
-    <div class="col-sm-12">
-      <h1>Todo list</h1>
+    <div class="col s12">
+      <h3>Todo list</h3>
     </div>
-    <hr>
-    <div class="col-sm-12">
+    <hr class="col s12">
+    <div class="col s12">
       <table id="todoTable" class="table table-striped table-bordered">
         <thead>
         <tr>
-          <th class="col-sm-6">Content</th>
-          <th class="col-sm-4">Category</th>
-          <th class="col-sm-2">Actions</th>
+          <th class="col s6">Content</th>
+          <th class="col s4">Category</th>
+          <th class="col s2">Actions</th>
         </tr>
         </thead>
         <tbody>
