--- a/client/views/category.html
+++ b/client/views/category.html
@@ -1,15 +1,15 @@
 <form name="categoryForm" novalidate>
   <div class="row">
-    <div class="col-sm-12">
-      <h1>All Category list</h1>
+    <div class="col s12">
+      <h3>All Category list</h3>
     </div>
     <hr>
-    <div class="col-sm-12">
+    <div class="col s12">
       <table id="categoryTable" class="table table-striped table-bordered">
         <thead>
         <tr>
-          <th class="col-sm-10">Category</th>
-          <th class="col-sm-2">Actions</th>
+          <th class="col s10">Category</th>
+          <th class="col s2">Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -56,15 +56,15 @@
         </tbody>
       </table>
     </div>
-    <div class="col-sm-12">
-      <h1>Unused Category list</h1>
+    <div class="col s12">
+      <h3>Unused Category list</h3>
     </div>
     <hr>
-    <div class="col-sm-12">
+    <div class="col s12">
       <table id="categoryTable" class="table table-striped table-bordered">
         <thead>
         <tr>
-          <th class="col-sm-10">Category</th>
+          <th class="col s10">Category</th>
         </tr>
         </thead>
         <tbody>
